# Arganic

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: publish.yml  test.yml
arganic/: arguments.py  properties.py  validators.py
assets/stylesheets/: extra.css
docs/: index.md
docs/reference/: arguments.md  index.md  validators.md
examples/: argument.py  argument_validate.py  class_method_drive.py  class_vehicles.py  custom_validator.py  function_drive.py  index.html  validator_dir.py  validator_email.py  validator_file.py  validator_max_length.py  validator_min_length.py  validator_url.py
reference/: index.html
reference/arguments/: index.html
reference/validators/: index.html
releases/: index.html
search/: search_index.json
tests/: decorated.py  test_examples.py  test_properties.py
tests/examples/: class_vehicle.py  class_vehicle_test.py  custom_validator.py  custom_validator_test.py  decorated.py  decorated_test.py  full_featured_argument.py  full_featured_argument_test.py  validator_dir.py  validator_dir_test.py  validator_email.py  validator_email_test.py  validator_file.py  validator_file_test.py  validator_max_length.py  validator_max_length_test.py  validator_min_length.py  validator_min_length_test.py  validator_url.py  validator_url_test.py
tests/examples/validate_dir/: validate_file.txt
